[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvextract"
version = "0.1"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Code-reviewer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["transformers", "torch"]

[project.scripts]
pyreview = "pyreview:main"

[project.urls]
"Homepage" = "https://github.com/mwestera/pyreview"
"Bug Tracker" = "https://github.com/mwestera/pyreview/issues"